--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -122,7 +122,7 @@ jobs:
       - name: Install and run github-changelog-generator
         run: |
           sudo gem install github_changelog_generator
-          github_changelog_generator -u Anexgohan -p ConsoleGalaxy --token ${{ secrets.GITHUB_TOKEN }} --since-tag v0.1.0
+          github_changelog_generator -u Anexgohan -p ConsoleGalaxy --token ${{ secrets.GITHUB_TOKEN }} --since-tag v1.0.0a
       # --------------------  Upload zip to Github Release --------------------      
       - uses: actions/checkout@v3
         with:
