--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -7,47 +7,59 @@ on:
     tags:
       - '*'
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Check for release tag
-      run: |
-        if [[ "${{ github.ref }}" != refs/tags/* ]]; then
-          echo "This is not a release tag. Exiting..."
-          exit 1
-        fi
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: ConsoleGalaxy-${{ github.ref_name }}
-        path: |
-          data
-          graphics
-          jars
-          mod_pictures
-          sounds
-          src
-          consolegalaxy.version
-          mod_info.json
-          icon.png
-
-  draft_release_notes:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-        # write permission is required to create a github release
-        contents: write
-        # write permission is required for autolabeler
-        # otherwise, read permission is required at least
-        pull-requests: write
-    steps:
-      - name: Draft Release
-        uses: release-drafter/release-drafter@v6
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      jobs:
+        build:
+          runs-on: ubuntu-latest
+      
+          steps:
+          - name: Checkout code
+            uses: actions/checkout@v2
+      
+          - name: Check for release tag
+            run: |
+              if [[ "${{ github.ref }}" != refs/tags/* ]]; then
+                echo "This is not a release tag. Exiting..."
+                exit 1
+              fi
+      
+          - name: Upload artifact
+            uses: actions/upload-artifact@v2
+            with:
+              name: ConsoleGalaxy-${{ github.ref_name }}
+              path: |
+                data
+                graphics
+                jars
+                mod_pictures
+                sounds
+                src
+                consolegalaxy.version
+                mod_info.json
+                icon.png
+      
+        draft_release_notes:
+          needs: build
+          runs-on: ubuntu-latest
+          permissions:
+              contents: write
+              pull-requests: write
+          steps:
+            - name: Draft Release
+              uses: release-drafter/release-drafter@v6
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+            - name: Download artifact
+              uses: actions/download-artifact@v2
+              with:
+                name: ConsoleGalaxy-${{ github.ref_name }}
+      
+            - name: Upload artifact to release
+              uses: actions/upload-release-asset@v1
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                upload_url: ${{ steps.create_release.outputs.upload_url }}
+                asset_path: ./ConsoleGalaxy-${{ github.ref_name }}
+                asset_name: ConsoleGalaxy-${{ github.ref_name }}
+                asset_content_type: application/zip
