--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -53,10 +53,16 @@ jobs:
       with:
         name: ConsoleGalaxy-${{ github.ref_name }}
 
-    - name: Draft Release
-      uses: release-drafter/release-drafter@v5
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref_name }}
+        release_name: Release ${{ github.ref_name }}
+        draft: true
+        prerelease: false
 
     - name: Upload Release Asset
       id: upload-release-asset 
