--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -22,8 +22,13 @@ jobs:
           exit 1
         fi
 
+    - name: Generate changelog
+      run: |
+        gem install github_changelog_generator
+        github_changelog_generator -u ${{ github.repository_owner }} -p ${{ github.event.repository.name }} --token ${{ secrets.GITHUB_TOKEN }}
+
     - name: Upload artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: ConsoleGalaxy-${{ github.ref_name }}
         path: |
@@ -36,17 +41,13 @@ jobs:
           consolegalaxy.version
           mod_info.json
           icon.png
+          CHANGELOG.md
+    - name: check download-artifact file log
+      run: ls -R
 
-  draft_release_notes:
+  release:
     needs: build
     runs-on: ubuntu-latest
-    permissions:
-        # write permission is required to create a github release
-        contents: write
-        # write permission is required for autolabeler
-        # otherwise, read permission is required at least
-        pull-requests: write
-
     steps:
     - name: Download artifact
       uses: actions/download-artifact@v2
@@ -59,9 +60,9 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref_name }}
-        release_name: Release ${{ github.ref_name }}
-        draft: true
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
         prerelease: false
 
     - name: Upload Release Asset
@@ -70,7 +71,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} 
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./ConsoleGalaxy-${{ github.ref_name }}.zip
         asset_name: ConsoleGalaxy-${{ github.ref_name }}.zip
         asset_content_type: application/zip
