--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -21,14 +21,8 @@ jobs:
           echo "This is not a release tag. Exiting..."
           exit 1
         fi
-
-    - name: Generate changelog
-      run: |
-        gem install github_changelog_generator
-        github_changelog_generator -u ${{ github.repository_owner }} -p ${{ github.event.repository.name }} --token ${{ secrets.GITHUB_TOKEN }}
-
     - name: Upload artifact
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v2
       with:
         name: ConsoleGalaxy-${{ github.ref_name }}
         path: |
@@ -41,37 +35,18 @@ jobs:
           consolegalaxy.version
           mod_info.json
           icon.png
-          CHANGELOG.md
-    - name: check download-artifact file log
-      run: ls -R
-
-  release:
-    needs: build
+  update_release_draft:
+    permissions:
+        # write permission is required to create a github release
+        contents: write
+        # write permission is required for autolabeler
+        # otherwise, read permission is required at least
+        pull-requests: write
     runs-on: ubuntu-latest
     steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: ConsoleGalaxy-${{ github.ref_name }}
+      # Drafts the next Release notes as Pull Requests are merged into "master"
+      - uses: release-drafter/release-drafter@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
 
-    - name: Upload Release Asset
-      id: upload-release-asset 
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./ConsoleGalaxy-${{ github.ref_name }}.zip
-        asset_name: ConsoleGalaxy-${{ github.ref_name }}.zip
-        asset_content_type: application/zip
