--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -12,15 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # - name: Check for release tag
+    #   run: |
+    #     if [[ "${{ github.ref }}" != refs/tags/* ]]; then
+    #       echo "This is not a release tag. Exiting..."
+    #       exit 1
+    #     fi
     - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Check for release tag
-      run: |
-        if [[ "${{ github.ref }}" != refs/tags/* ]]; then
-          echo "This is not a release tag. Exiting..."
-          exit 1
-        fi
+      uses: actions/checkout@v4
     - run: mkdir ConsoleGalaxy_zipFolder
     - name: Upload artifact
       uses: actions/upload-artifact@v4
@@ -50,23 +49,21 @@ jobs:
         cd ..
         ls -R
     
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+# download artifact
+  download:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
       with:
-        tag_name: ${{ github.ref }}
-        release_name: ConsoleGalaxy-${{ github.ref_name }}
-        draft: false
-        prerelease: false
-        #body_path: CHANGELOG.md
-    
-    - name: Realease to Github Releases
-      uses: ncipollo/release-action@v1
+        clean: false    # without this checkout deletes empty folders after each use
+    - name: Download artifact
+      uses: actions/download-artifact@v4
       with:
-        name: ConsoleGalaxy-${{ github.ref_name }}             # Release post Title Name
-        artifacts: ConsoleGalaxy-${{ github.ref_name }}.zip         # Release File name
-        token: ${{ secrets.GITHUB_TOKEN }}
-        #generateReleaseNotes: true
-      
+        name: ConsoleGalaxy-${{ github.ref_name }}
+        path: ConsoleGalaxy_zipFolder
+    - name: list files tag:2
+      run: |
+        cd ${{ github.workspace }}
+        ls -R
