--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -49,15 +49,15 @@ jobs:
         cd ..
         ls -R
     
-# download artifact
+# download extract artifact into ConsoleGalaxy_zipFolder
   download:
     runs-on: ubuntu-latest
     needs: build
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        clean: false    # without this checkout deletes empty folders after each use
+      # with:
+      #   clean: false    # without this checkout deletes empty folders after each use
     - name: Download artifact
       uses: actions/download-artifact@v4
       with:
@@ -67,3 +67,10 @@ jobs:
       run: |
         cd ${{ github.workspace }}
         ls -R
+    # create a zip file with name ConsoleGalaxy-${{ github.ref_name }}.zip
+    - name: Create zip file
+      run: |
+        cd ConsoleGalaxy_zipFolder
+        zip -r ConsoleGalaxy-${{ github.ref_name }}.zip .
+    - name: list files tag:3
+      run: ls -R
