--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -74,7 +74,7 @@ jobs:
         zip -r ConsoleGalaxy-${{ github.ref_name }}.zip .
     - name: list files tag:3
       run: ls -R
-    # make a CHANGELOGS.md file
+# make a CHANGELOGS.md file
     - name: Create CHANGELOGS file
       run: |
         echo "Changes for version ${{ github.ref_name }}" > CHANGELOGS.md
@@ -83,4 +83,37 @@ jobs:
     # echo the CHANGELOGS file
     - name: Show CHANGELOGS
       run: cat CHANGELOGS.md
-  
+    - name: list files tag:4
+      run: ls -R
+  release:
+    runs-on: ubuntu-latest
+    needs: prepare-zip
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Create a release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref_name }}
+        release_name: Release ${{ github.ref_name }}
+        body: |
+          ${{ steps.prepare-zip.outputs.CHANGELOGS }}
+        draft: false
+        prerelease: false
+    - name: list files tag:5
+      run: ls -R
+    - name: Upload release asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ConsoleGalaxy_zipFolder/ConsoleGalaxy-${{ github.ref_name }}.zip
+        asset_name: ConsoleGalaxy-${{ github.ref_name }}.zip
+        asset_content_type: application/zip
+    - name: list files tag:6
+      run: ls -R
