--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -69,6 +69,7 @@ jobs:
         ls -R
     # create a zip file with name ConsoleGalaxy-${{ github.ref_name }}.zip
     - name: Create zip file
+      id: make-zip-id
       run: |
         cd ConsoleGalaxy_zipFolder
         zip -r ConsoleGalaxy-${{ github.ref_name }}.zip .
@@ -76,6 +77,7 @@ jobs:
       run: ls -R
 # make a CHANGELOGS.md file
     - name: Create CHANGELOGS file
+      id: CHANGELOGS-file-id
       run: |
         echo "Changes for version ${{ github.ref_name }}" > CHANGELOGS.md
         echo "==============================" >> CHANGELOGS.md
@@ -85,6 +87,10 @@ jobs:
       run: cat CHANGELOGS.md
     - name: list files tag:4
       run: ls -R
+    outputs:
+      output1: ${{ steps.make-zip-id.outputs.zip-file }}
+      output2: ${{ steps.CHANGELOGS-file-id.outputs.changelogs-file }}
+
   release:
     runs-on: ubuntu-latest
     needs: prepare-zip
@@ -94,13 +100,14 @@ jobs:
     - name: Create a release
       id: create_release
       uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #env:
+        #OUTPUT1: ${{needs.prepare-zip.outputs.output2}}
+        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref_name }}
         release_name: Release ${{ github.ref_name }}
         body: |
-          ${{ steps.prepare-zip.outputs.CHANGELOGS }}
+          ${{ needs.prepare-zip.outputs.output2 }}
         draft: false
         prerelease: false
     - name: list files tag:5
