--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -100,9 +100,8 @@ jobs:
     - name: Create a release
       id: create_release
       uses: actions/create-release@v1
-      #env:
-        #OUTPUT1: ${{needs.prepare-zip.outputs.output2}}
-        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref_name }}
         release_name: Release ${{ github.ref_name }}
