--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -89,7 +89,7 @@ jobs:
       run: ls -R
     outputs:
       output1: ${{ steps.make-zip-id.outputs.zip-file }}
-      output2: ${{ steps.CHANGELOGS-file-id.outputs.changelogs-file }}
+      output2: ${{ steps.CHANGELOGS-file-id.outputs.CHANGELOGS.md }}
 
   release:
     runs-on: ubuntu-latest
@@ -117,7 +117,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        upload_url: ${{ steps.prepare-zip.outputs.upload_url }}
         asset_path: ConsoleGalaxy_zipFolder/ConsoleGalaxy-${{ github.ref_name }}.zip
         asset_name: ConsoleGalaxy-${{ github.ref_name }}.zip
         asset_content_type: application/zip
