--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -8,19 +8,23 @@ on:
       - '*'
 
 jobs:
-  build:
+  check-tags:
     runs-on: ubuntu-latest
 
     steps:
-    # - name: Check for release tag
-    #   run: |
-    #     if [[ "${{ github.ref }}" != refs/tags/* ]]; then
-    #       echo "This is not a release tag. Exiting..."
-    #       exit 1
-    #     fi
+    - name: Check for release tag
+      run: |
+        if [[ "${{ github.ref }}" != refs/tags/* ]]; then
+          echo "This is not a release tag. Exiting..."
+          exit 1
+        fi
+  build:
+    runs-on: ubuntu-latest
+    needs: check-tags
+    steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    - run: mkdir ConsoleGalaxy_zipFolder
+
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
@@ -44,63 +48,25 @@ jobs:
           !libs
           !readme_resources
           !out
+
     - name: list files tag:1
       run: |
         cd ..
         ls -R
-    
-# download extract artifact into ConsoleGalaxy_zipFolder
-  prepare-zip:
-    runs-on: ubuntu-latest
-    needs: build
-    outputs:
-      output1: ${{ steps.make-zip-id.outputs.zip-file }}
-      output2: ${{ steps.CHANGELOGS-file-id.outputs.CHANGELOGS.md }}
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      # with:
-      #   clean: false    # without this checkout deletes empty folders after each use
-    - name: Download artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: ConsoleGalaxy-${{ github.ref_name }}
-        path: ConsoleGalaxy_zipFolder
-    - name: list files tag:2
-      run: |
-        cd ${{ github.workspace }}
-        ls -R
-    # create a zip file with name ConsoleGalaxy-${{ github.ref_name }}.zip
-    - name: Create zip file
-      id: make-zip-id
-      run: |
-        cd ConsoleGalaxy_zipFolder
-        zip -r ConsoleGalaxy-${{ github.ref_name }}.zip .
-    - name: list files tag:3
-      run: ls -R
+
 # make a CHANGELOGS.md file
     - name: Create CHANGELOGS file
-      id: CHANGELOGS-file-id
       run: |
         echo "Changes for version ${{ github.ref_name }}" > CHANGELOGS.md
         echo "==============================" >> CHANGELOGS.md
         git log -10 --pretty="format:Title: %s%n%nCommits:%n%b%nBy: %cn%nHash: %h%nDate: %aD (%cr)%n----------------------------------%n" >> CHANGELOGS.md
-    # echo the CHANGELOGS file
     - name: Show CHANGELOGS
       run: cat CHANGELOGS.md
-    - name: list files tag:4
+    - name: list files tag:2
       run: ls -R
-    - name: Print output2
-      run: |
-        echo "Output2: ${{ steps.CHANGELOGS-file-id.outputs }}"
 
-  release:
-    runs-on: ubuntu-latest
-    needs: prepare-zip
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    - name: Create a release
+# create a release 
+    - name: create release
       id: create_release
       uses: actions/create-release@v1
       env:
@@ -109,20 +75,19 @@ jobs:
         tag_name: ${{ github.ref_name }}
         release_name: Release ${{ github.ref_name }}
         body: |
-          ${{ needs.prepare-zip.outputs.output2 }}
+          Changes for version ${{ github.ref_name }}
+          ===============================
+          $(cat CHANGELOGS.md)
         draft: false
         prerelease: false
-    - name: list files tag:5
-      run: ls -R
-    - name: Upload release asset
-      id: upload-release-asset
+
+# upload the release artifact
+    - name: upload release artifact
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.prepare-zip.outputs.upload_url }}
-        asset_path: ConsoleGalaxy_zipFolder/ConsoleGalaxy-${{ github.ref_name }}.zip
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ConsoleGalaxy-${{ github.ref_name }}.zip
         asset_name: ConsoleGalaxy-${{ github.ref_name }}.zip
         asset_content_type: application/zip
-    - name: list files tag:6
-      run: ls -R
