--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -83,11 +83,38 @@ jobs:
         ls -R ${{ github.workspace }}
 
   # make a CHANGELOGS.md file
-    - name: "✏️ Generate release changelog"
-      uses: heinrichreimer/action-github-changelog-generator@v2.3
+    - name: "Build Changelog"
+      id: build_changelog
+      uses: mikepenz/release-changelog-builder-action@v4
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        output: CHANGELOGS.md
+        commitMode: true
+        outputFile: CHANGELOGS.md
+        configurationJson: |
+          {
+            "template": "#{{CHANGELOG}}",
+            "categories": [
+              {
+                  "title": "## Feature",
+                  "labels": ["feat", "feature", "enhancement", "new", "add", "added"]
+              },
+              {
+                  "title": "## Fix",
+                  "labels": ["fix", "fixes", "fixed", "fixing", "bug", "bugs", "error", "mistake", "problem", "resolve", "resolved", "correct", "corrected"]
+              },
+              {
+                  "title": "## Other",
+                  "labels": ["misc", "miscellaneous", "other"]
+              }
+            ],
+            "label_extractor": [
+              {
+                "pattern": "^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test){1}(\\([\\w\\-\\.]+\\))?(!)?: ([\\w ])+([\\s\\S]*)",
+                "target": "$1"
+              }
+            ],
+          }
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   # create a release with the CHANGELOGS.md file
     - name: Release
